:rocket: Les Observables partie 2

--- a/src/app/pages/about-service/about-service.component.html
+++ b/src/app/pages/about-service/about-service.component.html
@@ -26,5 +26,7 @@
 <section>
   <h2>Todos</h2>
 
-  <p>Ici, les todos</p>
+  <ul>
+    <li *ngFor="let td of todos" [class.completed]="td.completed">{{td.title}}</li>
+  </ul>
 </section>
