--- a/src/app/components/code/code.component.html
+++ b/src/app/components/code/code.component.html
@@ -1,4 +1,4 @@
 <pre   >
-  <code class="typescript ts" [highlight]="code" [languages]="['typescript']" (highlighted)="onHighlight($event)" [lineNumbers]="true">
+  <code class="" [highlight]="code" [languages]="['typescript']" (highlighted)="onHighlight($event)" [lineNumbers]="true">
   </code>
 </pre>
