:tada: Login - partie 1

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -16,6 +16,9 @@
       <a routerLink="/services">Services</a>
     </li>
     <li>
+      <a routerLink="/login">Login</a>
+    </li>
+    <li>
       <a routerLink="/admin">Admin</a>
     </li>
     <li class="dropdown-link">
