--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -19,6 +19,9 @@
       <a routerLink="/login">Login</a>
     </li>
     <li>
+      <a routerLink="/recap">Récapitulatif</a>
+    </li>
+    <li>
       <a routerLink="/admin">Admin</a>
     </li>
     <li class="dropdown-link">
