--- a/src/styles.css
+++ b/src/styles.css
@@ -112,3 +112,49 @@ button:disabled {
   gap: 30px;
 }
 
+table {
+  margin-top: 60px;
+  border: solid black 2px;
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: white;
+  position: relative;
+}
+
+table:after {
+  content: '';
+  width: 200px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  color: var(--blue);
+
+}
+
+thead {
+  background-color: var(--yellow);
+  border-bottom: solid black 2px;
+  border-radius: 8px;
+}
+
+thead th:last-child {
+  border-top-right-radius: 8px;
+}
+thead th:first-child {
+  border-top-left-radius: 8px;
+
+}
+
+thead th {
+  font-family: var(--title-font);
+  text-align: left;
+  padding: 10px 15px;
+
+}
+
+td {
+  padding: 10px 15px;
+  border-bottom: solid grey 1px;
+  font-family: var(--main-font);
+}
