--- a/src/app/pages/notfound/notfound.component.html
+++ b/src/app/pages/notfound/notfound.component.html
@@ -1,1 +1,10 @@
-<p>notfound works!</p>
+<h1>404 - Page Not found !</h1>
+<!--
+<p class="grid">
+  <button (click)="nice()">Nice</button>
+  <button (click)="nicer()">Nicer</button>
+  <button (click)="error()">Error</button>
+  <button (click)="errorIcon()">Error Icon</button>
+  <button (click)="warn()">Warn</button>
+</p>
+-->
