--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,10 @@
 }
 
 
-body {margin: 0}
+body {
+  margin: 0;
+  font-family: var(--main-font);
+}
 .body {
   margin: 0;
   font-family: var(--main-font);
